--- a/notebooks/01city_bikes.ipynb
+++ b/notebooks/01city_bikes.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -199,8 +199,6 @@
        "      <th>extra.has_ebikes</th>\n",
        "      <th>extra.last_updated</th>\n",
        "      <th>extra.normal_bikes</th>\n",
-       "      <th>extra.rental_uris.android</th>\n",
-       "      <th>extra.rental_uris.ios</th>\n",
        "      <th>extra.renting</th>\n",
        "      <th>extra.returning</th>\n",
        "      <th>extra.uid</th>\n",
@@ -209,40 +207,36 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>bb7665847eda4d3b5654ef23584bba2f</td>\n",
        "      <td>40.58002</td>\n",
        "      <td>-122.38890</td>\n",
        "      <td>Market and Gold Street</td>\n",
-       "      <td>2024-05-23T07:16:12.575000Z</td>\n",
+       "      <td>2024-05-25T18:15:37.982000Z</td>\n",
        "      <td>Market Street &amp; Gold Street</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>True</td>\n",
-       "      <td>1716448569</td>\n",
+       "      <td>1716660937</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://www.bcycle.com/applink?system_id=bcycl...</td>\n",
-       "      <td>https://www.bcycle.com/applink?system_id=bcycl...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>bcycle_redding_7427</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>3bb59ffd3799adff3f475e8d3985532f</td>\n",
        "      <td>40.58352</td>\n",
        "      <td>-122.39042</td>\n",
        "      <td>Market Center South</td>\n",
-       "      <td>2024-05-23T07:16:12.578000Z</td>\n",
+       "      <td>2024-05-25T18:15:38.034000Z</td>\n",
        "      <td>Market Street &amp; Yuba Street</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>True</td>\n",
-       "      <td>1716448569</td>\n",
+       "      <td>1716660937</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://www.bcycle.com/applink?system_id=bcycl...</td>\n",
-       "      <td>https://www.bcycle.com/applink?system_id=bcycl...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>bcycle_redding_7426</td>\n",
@@ -255,34 +249,30 @@
        "      <td>40.58435</td>\n",
        "      <td>-122.39067</td>\n",
        "      <td>Market Center North</td>\n",
-       "      <td>2024-05-23T07:16:12.579000Z</td>\n",
+       "      <td>2024-05-25T18:15:38.035000Z</td>\n",
        "      <td>1371 Butte Street</td>\n",
        "      <td>3</td>\n",
        "      <td>True</td>\n",
-       "      <td>1716448569</td>\n",
+       "      <td>1716660937</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://www.bcycle.com/applink?system_id=bcycl...</td>\n",
-       "      <td>https://www.bcycle.com/applink?system_id=bcycl...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>bcycle_redding_7425</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>dd5c0ef4079f9e920b3cdba5c3ca167c</td>\n",
        "      <td>40.59502</td>\n",
        "      <td>-122.40150</td>\n",
        "      <td>Diestelhorst Bridge</td>\n",
-       "      <td>2024-05-23T07:16:12.589000Z</td>\n",
+       "      <td>2024-05-25T18:15:38.036000Z</td>\n",
        "      <td>Benton Drive</td>\n",
-       "      <td>3</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1716448569</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://www.bcycle.com/applink?system_id=bcycl...</td>\n",
-       "      <td>https://www.bcycle.com/applink?system_id=bcycl...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1716660937</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>bcycle_redding_7424</td>\n",
@@ -295,14 +285,12 @@
        "      <td>40.57337</td>\n",
        "      <td>-122.38177</td>\n",
        "      <td>Redding City Hall</td>\n",
-       "      <td>2024-05-23T07:16:12.589000Z</td>\n",
+       "      <td>2024-05-25T18:15:38.037000Z</td>\n",
        "      <td>777 Cypress Ave</td>\n",
        "      <td>3</td>\n",
        "      <td>True</td>\n",
-       "      <td>1716448569</td>\n",
+       "      <td>1716660937</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://www.bcycle.com/applink?system_id=bcycl...</td>\n",
-       "      <td>https://www.bcycle.com/applink?system_id=bcycl...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>bcycle_redding_7423</td>\n",
@@ -313,56 +301,42 @@
       ],
       "text/plain": [
        "   empty_slots  free_bikes                                id  latitude  \\\n",
-       "0            1           3  bb7665847eda4d3b5654ef23584bba2f  40.58002   \n",
-       "1            2           3  3bb59ffd3799adff3f475e8d3985532f  40.58352   \n",
+       "0            2           2  bb7665847eda4d3b5654ef23584bba2f  40.58002   \n",
+       "1            3           2  3bb59ffd3799adff3f475e8d3985532f  40.58352   \n",
        "2            2           3  08aae6d19bdfffb93561437caf892f36  40.58435   \n",
-       "3            2           3  dd5c0ef4079f9e920b3cdba5c3ca167c  40.59502   \n",
+       "3            3           0  dd5c0ef4079f9e920b3cdba5c3ca167c  40.59502   \n",
        "4            3           3  64a7ac84a24f102734b87abc4ba71af0  40.57337   \n",
        "\n",
        "   longitude                    name                    timestamp  \\\n",
-       "0 -122.38890  Market and Gold Street  2024-05-23T07:16:12.575000Z   \n",
-       "1 -122.39042     Market Center South  2024-05-23T07:16:12.578000Z   \n",
-       "2 -122.39067     Market Center North  2024-05-23T07:16:12.579000Z   \n",
-       "3 -122.40150     Diestelhorst Bridge  2024-05-23T07:16:12.589000Z   \n",
-       "4 -122.38177       Redding City Hall  2024-05-23T07:16:12.589000Z   \n",
+       "0 -122.38890  Market and Gold Street  2024-05-25T18:15:37.982000Z   \n",
+       "1 -122.39042     Market Center South  2024-05-25T18:15:38.034000Z   \n",
+       "2 -122.39067     Market Center North  2024-05-25T18:15:38.035000Z   \n",
+       "3 -122.40150     Diestelhorst Bridge  2024-05-25T18:15:38.036000Z   \n",
+       "4 -122.38177       Redding City Hall  2024-05-25T18:15:38.037000Z   \n",
        "\n",
        "                 extra.address  extra.ebikes  extra.has_ebikes  \\\n",
-       "0  Market Street & Gold Street             3              True   \n",
-       "1  Market Street & Yuba Street             3              True   \n",
+       "0  Market Street & Gold Street             2              True   \n",
+       "1  Market Street & Yuba Street             2              True   \n",
        "2            1371 Butte Street             3              True   \n",
-       "3                 Benton Drive             3              True   \n",
+       "3                 Benton Drive             0              True   \n",
        "4              777 Cypress Ave             3              True   \n",
        "\n",
-       "   extra.last_updated  extra.normal_bikes  \\\n",
-       "0          1716448569                   0   \n",
-       "1          1716448569                   0   \n",
-       "2          1716448569                   0   \n",
-       "3          1716448569                   0   \n",
-       "4          1716448569                   0   \n",
+       "   extra.last_updated  extra.normal_bikes  extra.renting  extra.returning  \\\n",
+       "0          1716660937                   0              1                1   \n",
+       "1          1716660937                   0              1                1   \n",
+       "2          1716660937                   0              1                1   \n",
+       "3          1716660937                   0              1                1   \n",
+       "4          1716660937                   0              1                1   \n",
        "\n",
-       "                           extra.rental_uris.android  \\\n",
-       "0  https://www.bcycle.com/applink?system_id=bcycl...   \n",
-       "1  https://www.bcycle.com/applink?system_id=bcycl...   \n",
-       "2  https://www.bcycle.com/applink?system_id=bcycl...   \n",
-       "3  https://www.bcycle.com/applink?system_id=bcycl...   \n",
-       "4  https://www.bcycle.com/applink?system_id=bcycl...   \n",
-       "\n",
-       "                               extra.rental_uris.ios  extra.renting  \\\n",
-       "0  https://www.bcycle.com/applink?system_id=bcycl...              1   \n",
-       "1  https://www.bcycle.com/applink?system_id=bcycl...              1   \n",
-       "2  https://www.bcycle.com/applink?system_id=bcycl...              1   \n",
-       "3  https://www.bcycle.com/applink?system_id=bcycl...              1   \n",
-       "4  https://www.bcycle.com/applink?system_id=bcycl...              1   \n",
-       "\n",
-       "   extra.returning            extra.uid  \n",
-       "0                1  bcycle_redding_7427  \n",
-       "1                1  bcycle_redding_7426  \n",
-       "2                1  bcycle_redding_7425  \n",
-       "3                1  bcycle_redding_7424  \n",
-       "4                1  bcycle_redding_7423  "
+       "             extra.uid  \n",
+       "0  bcycle_redding_7427  \n",
+       "1  bcycle_redding_7426  \n",
+       "2  bcycle_redding_7425  \n",
+       "3  bcycle_redding_7424  \n",
+       "4  bcycle_redding_7423  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,10 +347,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dropping uneccessary url columns\n",
+    "ReddingStations.drop(columns=['extra.rental_uris.android','extra.rental_uris.ios'],inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Renaming columns to be descriptive and clear to what they are\n",
+    "ReddingStations.rename(columns={'extra.address': 'address', 'extra.ebikes': 'free_ebikes','extra.normal_bikes': 'free_normal_bikes','extra.renting':'renting',\n",
+    "                                'extra.returning':'returning','extra.uid':'uid','extra.last_updated': 'last_updated','extra.has_ebikes':'has_ebikes'}, inplace=True\n",
+    "                                )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding total bike slots column for each station \n",
+    "ReddingStations['total_slots'] = ReddingStations['empty_slots'] + ReddingStations['free_bikes']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['id', 'uid', 'empty_slots', 'free_bikes', 'total_slots',\n",
+       "       'latitude', 'longitude', 'name', 'address', 'free_ebikes',\n",
+       "       'has_ebikes', 'free_normal_bikes', 'timestamp', 'last_updated',\n",
+       "       'renting', 'returning'], dtype=object)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Existing Columns in df\n",
+    "ReddingStations.columns.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rearranging column order\n",
+    "cols = ['id', 'uid', 'empty_slots', 'free_bikes', 'total_slots', 'latitude', 'longitude', 'name',\n",
+    "        'address', 'free_ebikes', 'has_ebikes', 'free_normal_bikes', 'timestamp', 'last_updated', 'renting', 'returning'\n",
+    "       ]\n",
+    "ReddingStations = ReddingStations[cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving dataframe to csv. Commented out as to not accidentally overwrite existing files\n",
     "# ReddingStations.to_csv('../data/ReddingBikesDF.csv',index=False)"
    ]
   }
