--- a/notebooks/04model_building.ipynb
+++ b/notebooks/04model_building.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "4                  3           3            6  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,74 +525,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Better again, dropping the next variable: totalRating"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X.drop('totalRatings',inplace=True, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                            OLS Regression Results                            \n",
-      "==============================================================================\n",
-      "Dep. Variable:            total_slots   R-squared:                       0.368\n",
-      "Model:                            OLS   Adj. R-squared:                  0.302\n",
-      "Method:                 Least Squares   F-statistic:                     5.539\n",
-      "Date:                Mon, 27 May 2024   Prob (F-statistic):             0.0127\n",
-      "Time:                        20:44:05   Log-Likelihood:                -31.815\n",
-      "No. Observations:                  22   AIC:                             69.63\n",
-      "Df Residuals:                      19   BIC:                             72.90\n",
-      "Df Model:                           2                                         \n",
-      "Covariance Type:            nonrobust                                         \n",
-      "==============================================================================\n",
-      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "------------------------------------------------------------------------------\n",
-      "const         11.9609      2.200      5.436      0.000       7.356      16.566\n",
-      "venueCount    -0.0897      0.029     -3.143      0.005      -0.149      -0.030\n",
-      "distance      -0.0073      0.002     -3.159      0.005      -0.012      -0.002\n",
-      "==============================================================================\n",
-      "Omnibus:                        5.550   Durbin-Watson:                   2.055\n",
-      "Prob(Omnibus):                  0.062   Jarque-Bera (JB):                3.416\n",
-      "Skew:                           0.877   Prob(JB):                        0.181\n",
-      "Kurtosis:                       3.809   Cond. No.                     5.31e+03\n",
-      "==============================================================================\n",
-      "\n",
-      "Notes:\n",
-      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[2] The condition number is large, 5.31e+03. This might indicate that there are\n",
-      "strong multicollinearity or other numerical problems.\n"
-     ]
-    }
-   ],
-   "source": [
-    "lin_reg = sm.OLS(Y,X)\n",
-    "model = lin_reg.fit()\n",
-    "print_model = model.summary()\n",
-    "print(print_model)"
+    "We reach a a model that rejects the null hypothesis, giving us a statistically significant model of:\n",
+    "\n",
+    " `8.22-0.0895(venueCount)-0.0065(distanceInMeters)+0.02(totalRatings)=(BikeSlots)`\n",
+    "\n",
+    "This model shows that the amount of bike slots at each bike stations location is dependent on the average distance to the number of venues nearby, as ell as the distance of venues nearby and the totalRatings. \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We reach a a model that rejects the null hypothesis, giving us a statistically significant model of:\n",
+    "With this, we have our statistically significant model, which shows that bike slots are dependent on the number of venues nearby, the average distance of those venues, and the average number of ratings for each venue. \n",
     "\n",
-    " `11.9609-0.0897(venueCount)-0.0073(distanceInMeters)=(BikeSlots)`\n",
+    "Note it isn’t the rating of the venue itself that was statistically significant, just the number of ratings. \n",
     "\n",
-    "This model shows that the amount of bike slots at each bike stations location is dependent on the average distance to the number of venues nearby. \n"
+    "Intuitively, this makes sense, as if there are more people contributing to ratings then there is likely more traffic. The distance also makes sense as it seems the further the venues are, the less bikes there will be. Slightly less intuitively, the more venues in a location, the less bikes there are."
    ]
   }
  ],
